--- a/openerp-server.conf
+++ b/openerp-server.conf
@@ -3,10 +3,10 @@
 ; admin_passwd = admin
 db_host = localhost
 db_port = 5432
-db_user = odoo
-db_password = odoo
+db_user = openerp
 ;log-level = debug_rpc_answer
 ;log-level = debug_sql
-addons_path = /home/kittiu/workspace/rev_10042/web/addons,/home/kittiu/workspace/rev_10042/addons,/home/kittiu/workspace/openerp_sqp/sqp-addons,/home/kittiu/workspace/ecosoft_official_addons/ecosoft-addons/7.0,/home/kittiu/workspace/ecosoft_official_addons/revised-addons/7.0
-xmlrpc_port = 6069
-thai_font_path = /home/kittiu/workspace/ecosoft_official_addons/revised-addons/7.0/ac_report_font_thai/fonts
+addons_path = /Users/kittiu/workspace/rev_10042/addons,/Users/kittiu/workspace/rev_10042/web/addons,../../openerp_sqp/sqp-addons,../../ecosoft_v7/addons-eco,../../ecosoft_v7/addons-rev
+;addons_path = /Users/kittiu/workspace/rev_10042/addons,/Users/kittiu/workspace/rev_10042/web/addons,../../openerp_sqp/sqp-addons,/Users/kittiu/temp/ecosoft-addons,/Users/kittiu/temp/revised-addons
+xmlrpc_port = 8069
+thai_font_path = ../../ecosoft_v7/addons-rev/ac_report_font_thai/fonts
