--- a/openerp-server.conf
+++ b/openerp-server.conf
@@ -3,11 +3,11 @@
 ; admin_passwd = admin
 db_host = localhost
 db_port = 5432
-db_user = openerp
-db_password = openerp
+db_user = odoo
+db_password = odoo
 ;log-level = debug_rpc_answer
 ;log-level = debug_sql
-addons_path = /home/kittiu/workspace/rev_10042/addons,/home/kittiu/workspace/rev_10042/web/addons,../../openerp_sqp/sqp-addons,../../ecosoft_v7/addons-eco,../../ecosoft_v7/addons-rev
-;addons_path = /home/kittiu/workspace/rev_10042/addons,/home/kittiu/workspace/rev_10042/web/addons,../../openerp_sqp/sqp-addons,/home/kittiu/temp/ecosoft-addons,/home/kittiu/temp/revised-addons
-xmlrpc_port = 8069
+addons_path = /home/kittiu/workspace/rev_10042/web/addons,/home/kittiu/workspace/rev_10042/addons,../../openerp_sqp/sqp-addons,../../ecosoft_v7/addons-eco,../../ecosoft_v7/addons-rev
+;addons_path = /home/kittiu/workspace/repo_openerp/odoo/addons,../../openerp_sqp/sqp-addons,../../ecosoft_v7/addons-eco,../../ecosoft_v7/addons-rev
+xmlrpc_port = 2069
 thai_font_path = ../../ecosoft_v7/addons-rev/ac_report_font_thai/fonts
